@@ -1011,31 +1011,107 @@ murrine_rgba_draw_separator (cairo_t *cr,
 
 	if (separator->horizontal)
 	{
-		cairo_translate       (cr, x, y+0.5);
+		cairo_translate (cr, x, y+0.5);
 
-		cairo_move_to         (cr, 0.0,     0.0);
-		cairo_line_to         (cr, width+1, 0.0);
-		murrine_set_color_rgb (cr, dark);
-		cairo_stroke          (cr);
-
-		cairo_move_to          (cr, 0.0,   1.0);
-		cairo_line_to          (cr, width, 1.0);
-		murrine_set_color_rgba (cr, highlight, 0.5);
-		cairo_stroke           (cr);
+		cairo_move_to (cr, 0.0,     0.0);
+		cairo_line_to (cr, width+1, 0.0);
+		switch (separator->style)
+		{
+			default:
+			case 0:
+				murrine_set_color_rgb (cr, dark);
+				cairo_stroke (cr);
+				break;
+			case 1:
+			{
+				cairo_pattern_t *pat;
+				pat = cairo_pattern_create_linear (0, 0, width, 0);
+				murrine_pattern_add_color_stop_rgba (pat, 0.00, dark, 0.0);
+				murrine_pattern_add_color_stop_rgba (pat, 0.25, dark, 1.0);
+				murrine_pattern_add_color_stop_rgba (pat, 0.75, dark, 1.0);
+				murrine_pattern_add_color_stop_rgba (pat, 1.00, dark, 0.0);
+				cairo_set_source (cr, pat);
+				cairo_stroke (cr);
+				cairo_pattern_destroy (pat);
+				break;
+			}
+		}
+		
+		cairo_move_to (cr, 0.0,   1.0);
+		cairo_line_to (cr, width, 1.0);
+		switch (separator->style)
+		{
+			default:
+			case 0:
+				murrine_set_color_rgba (cr, highlight, 0.5);
+				cairo_stroke (cr);
+				break;
+			case 1:
+			{
+				cairo_pattern_t *pat;
+				pat = cairo_pattern_create_linear (0, 0, width, 0);
+				murrine_pattern_add_color_stop_rgba (pat, 0.00, highlight, 0.0);
+				murrine_pattern_add_color_stop_rgba (pat, 0.25, highlight, 0.5);
+				murrine_pattern_add_color_stop_rgba (pat, 0.75, highlight, 0.5);
+				murrine_pattern_add_color_stop_rgba (pat, 1.00, highlight, 0.0);
+				cairo_set_source (cr, pat);
+				cairo_stroke (cr);
+				cairo_pattern_destroy (pat);
+				break;
+			}
+		}
 	}
 	else
 	{
-		cairo_translate       (cr, x+0.5, y);
+		cairo_translate (cr, x+0.5, y);
 
-		cairo_move_to         (cr, 0.0, 0.0);
-		cairo_line_to         (cr, 0.0, height);
-		murrine_set_color_rgb (cr, dark);
-		cairo_stroke          (cr);
+		cairo_move_to (cr, 0.0, 0.0);
+		cairo_line_to (cr, 0.0, height);
+		switch (separator->style)
+		{
+			default:
+			case 0:
+				murrine_set_color_rgb (cr, dark);
+				cairo_stroke (cr);
+				break;
+			case 1:
+			{
+				cairo_pattern_t *pat;
+				pat = cairo_pattern_create_linear (0, 0, width, 0);
+				murrine_pattern_add_color_stop_rgba (pat, 0.00, dark, 0.0);
+				murrine_pattern_add_color_stop_rgba (pat, 0.25, dark, 1.0);
+				murrine_pattern_add_color_stop_rgba (pat, 0.75, dark, 1.0);
+				murrine_pattern_add_color_stop_rgba (pat, 1.00, dark, 0.0);
+				cairo_set_source (cr, pat);
+				cairo_stroke (cr);
+				cairo_pattern_destroy (pat);
+				break;
+			}
+		}
 
-		cairo_move_to          (cr, 1.0, 0.0);
-		cairo_line_to          (cr, 1.0, height);
-		murrine_set_color_rgba (cr, highlight, 0.5);
-		cairo_stroke           (cr);
+		cairo_move_to (cr, 1.0, 0.0);
+		cairo_line_to (cr, 1.0, height);
+		switch (separator->style)
+		{
+			default:
+			case 0:
+				murrine_set_color_rgba (cr, highlight, 0.5);
+				cairo_stroke (cr);
+				break;
+			case 1:
+			{
+				cairo_pattern_t *pat;
+				pat = cairo_pattern_create_linear (0, 0, width, 0);
+				murrine_pattern_add_color_stop_rgba (pat, 0.00, highlight, 0.0);
+				murrine_pattern_add_color_stop_rgba (pat, 0.25, highlight, 0.5);
+				murrine_pattern_add_color_stop_rgba (pat, 0.75, highlight, 0.5);
+				murrine_pattern_add_color_stop_rgba (pat, 1.00, highlight, 0.0);
+				cairo_set_source (cr, pat);
+				cairo_stroke (cr);
+				cairo_pattern_destroy (pat);
+				break;
+			}
+		}
 	}
 }
 
