@@ -66,6 +66,7 @@ struct _MurrineStyle
 	guint8   progressbarstyle;
 	guint8   reliefstyle;
 	guint8   roundness;
+	guint8   separatorstyle;
 	guint8   scrollbarstyle;
 	guint8   sliderstyle;
 	guint8   spinbuttonstyle;
